--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "eslint-config-react-app": "^7.0.0",
     "firebase": "^9.6.6",
     "flutterwave-react-v3": "^1.2.0",
     "public-ip": "^5.0.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.2",
     "react-dom": "^17.0.2",
+    "react-loader-spinner": "^6.0.0-0",
     "react-paystack": "^3.0.5",
     "react-router": "^6.2.1",
     "react-router-dom": "^6.2.1",
