--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^17.0.2",
     "react-loader-spinner": "^6.0.0-0",
     "react-paystack": "^3.0.5",
+    "react-reveal": "^1.2.2",
     "react-router": "^6.2.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
