--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.2",
     "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
     "react-loader-spinner": "^6.0.0-0",
     "react-paystack": "^3.0.5",
     "react-reveal": "^1.2.2",
