--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "chart.js": "^3.7.1",
     "eslint-config-react-app": "^7.0.0",
     "firebase": "^9.6.6",
     "flutterwave-react-v3": "^1.2.0",
     "public-ip": "^5.0.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.2",
+    "react-chartjs-2": "^4.0.1",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "react-loader-spinner": "^6.0.0-0",
