--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-router": "^6.2.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-to-print": "^2.14.7",
     "react-toastify": "^8.1.1",
     "uuidv4": "^6.2.12",
     "web-vitals": "^2.1.4"
