--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@stahl.luke/react-reveal": "^1.2.3",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
@@ -11,14 +12,13 @@
     "firebase": "^9.6.6",
     "flutterwave-react-v3": "^1.2.0",
     "public-ip": "^5.0.0",
-    "react": "^17.0.2",
+    "react": "^16.12.0 || ^17.0.0",
     "react-bootstrap": "^2.1.2",
     "react-chartjs-2": "^4.0.1",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "react-loader-spinner": "^6.0.0-0",
     "react-paystack": "^3.0.5",
-    "react-reveal": "^1.2.2",
     "react-router": "^6.2.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
@@ -50,6 +50,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "peerDependencies": {
+    "react": "^16.12.0 || ^17.0.0"
   },
   "devDependencies": {
     "uuid": "^8.3.2"
