--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "autoprefixer": "10.4.5",
     "chart.js": "^3.7.1",
     "eslint-config-react-app": "^7.0.0",
     "firebase": "^9.6.6",
