--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-scripts": "5.0.0",
     "react-to-print": "^2.14.7",
     "react-toastify": "^8.1.1",
+    "tawkto-react": "^3.0.1",
     "uuidv4": "^6.2.12",
     "web-vitals": "^2.1.4"
   },
