--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-router": "^6.2.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-tagsinput": "^3.19.0",
     "react-to-print": "^2.14.7",
     "react-toastify": "^8.1.1",
     "tawkto-react": "^3.0.1",
