--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "chart.js": "^3.7.1",
     "eslint-config-react-app": "^7.0.0",
     "firebase": "^9.6.6",
+    "flutterwave-node-v3": "^1.0.11",
     "flutterwave-react-v3": "^1.2.0",
     "klump-react": "^1.0.1",
     "public-ip": "^5.0.0",
@@ -56,6 +57,7 @@
       "last 1 safari version"
     ]
   },
+  "proxy": "http://localhost:3001",
   "peerDependencies": {
     "react": "^16.12.0 || ^17.0.0"
   },
